Ensure footer sticks to bottom of visible area

--- a/mesolex/static/scss/pages/_home.scss
+++ b/mesolex/static/scss/pages/_home.scss
@@ -1,3 +1,13 @@
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1 1 auto;
+}
+
 .language-links-container {
   position: relative;
 }
